== master

== 0.6.0 / 2009-03-03

* Allow multiple conditions for callbacks / class behaviors
* Add support for state-driven class behavior with :if/:unless options
* Alias Machine#event as Machine#on
* Fix nil from/to states not being handled properly
* Simplify hooking callbacks into loopbacks
* Add simplified transition/callback requirement syntax

== 0.5.2 / 2009-02-17

* Improve pretty-print of events
* Simplify state/event matching design, improving guard performance by 30%
* Add better error notification when conflicting guard options are defined
* Fix scope name pluralization not being applied correctly

== 0.5.1 / 2009-02-11

* Allow states to be drawn as ellipses to accommodate long names
* Fix rake tasks not being registered in Rails/Merb applications
* Never automatically define machine attribute accessors when using an integration

== 0.5.0 / 2009-01-11

* Add to_name and from_name to transition objects
* Add nicely formatted #inspect for transitions
* Fix ActiveRecord integrations failing when the database doesn't exist yet
* Fix states not being drawn in GraphViz graphs in the correct order
* Add nicely formatted #inspect for states and events
* Simplify machine context-switching
* Store events/states in enumerable node collections
* No longer allow subclasses to change the integration
* Move fire! action logic into the Event class (no longer calls fire action on the object)
* Allow states in subclasses to have different values
* Recommend that all states be referenced as symbols instead of strings
* All states must now be named (and can be associated with other value types)
* Add support for customizing the actual stored value for a state
* Add compatibility with Ruby 1.9+

== 0.4.3 / 2008-12-28

* Allow dm-observer integration to be optional
* Fix non-lambda callbacks not working for DataMapper/Sequel

== 0.4.2 / 2008-12-28

* Fix graphs not being drawn the same way consistently
* Add support for sharing transitions across multiple events