@@ -60,6 +60,23 @@ module StateMachine
     # rolled back.  If an after callback halts the chain, the previous result
     # still applies and the transaction is *not* rolled back.
     # 
+    # == Validation errors
+    # 
+    # If an event fails to successfully fire because there are no matching
+    # transitions for the current record, a validation error is added to the
+    # record's state attribute to help in determining why it failed and for
+    # reporting via the UI.
+    # 
+    # For example,
+    # 
+    #   vehicle = Vehicle.create(:state => 'idling')  # => #<Vehicle id: 1, name: nil, state: "idling">
+    #   vehicle.ignite                                # => false
+    #   vehicle.errors.full_messages                  # => ["State cannot be transitioned via :ignite from :idling"]
+    # 
+    # If an event fails to fire because of a validation error on the record and
+    # *not* because a matching transition was not available, no error messages
+    # will be added to the state attribute.
+    # 
     # == Scopes
     # 
     # To assist in filtering models with specific states, a series of named
@@ -170,6 +187,12 @@ module StateMachine
       # Loads additional files specific to ActiveRecord
       def self.extended(base) #:nodoc:
         require 'state_machine/integrations/active_record/observer'
+      end
+      
+      # Adds a validation error to the given object after failing to fire a
+      # specific event
+      def invalidate(object, event)
+        object.errors.add(attribute, invalid_message(object, event))
       end
       
       # Runs a new database transaction, rolling back any changes by raising
